Styled the spaghetti

--- a/react-redux-talk.html
+++ b/react-redux-talk.html
@@ -62,10 +62,16 @@
                 </section>
 
                 <section>
-                  <img src="spaghetti1.jpg"/>
-                  http://www.wikihow.com/Image:Make-Spaghetti-Step-1.jpg
-                  <img src="spaghetti2.jpg"/>
-                  https://www.flickr.com/photos/spilt-milk/5829575950
+                  <div class="container">
+                  <div>
+                    <img style="align: right;" src="spaghetti1.jpg"/>
+                    <p class="imagesource">http://www.wikihow.com/Image:Make-Spaghetti-Step-1.jpg</p>
+                  </div>
+                  <div class="fragment">
+                    <img width="500px" src="spaghetti2.jpg"/>
+                    <p class="imagesource" width="400px">https://www.flickr.com/photos/spilt-milk/5829575950</p>
+                  </div>
+                  </div>
                 </section>
               
                 
