Now the presentation is internet-independent...

--- a/react-redux-talk.html
+++ b/react-redux-talk.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="default-highlight.css">
         <link rel="stylesheet" href="custom.css">
 
-        <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300,300italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="Lato.css" type="text/css">
 
 		<!-- Printing and PDF exports -->
 		<script>
