Announcing the workshop on the following day.

--- a/react-redux-talk.html
+++ b/react-redux-talk.html
@@ -684,7 +684,7 @@ class UserCreation extends Component {
                 </div>
                 <div style="font-family: Lato, monospace; font-weight:300; text-align:left;margin-top:38px;">https://github.com/NicoleRauch/VortragReactUndRedux</div>
 
-                <div style="font-family: Lato; font-weight:300; text-align:left;margin-top:38px;">Ganztägiger Workshop zu React und Redux</div>
+                <div style="font-family: Lato; font-weight:300; text-align:left;margin-top:38px;">Morgen: Ganztägiger Workshop zu React und Redux</div>
 
               </section>
               
