Let's demo the time-travelling debugger for a bit.

--- a/react-redux-talk.html
+++ b/react-redux-talk.html
@@ -663,6 +663,13 @@ class UserCreation extends Component {
                 <h2>Redux Logger</h2>
               </section>
 
+              <!-- ********************************************************************************** -->
+              <!-- Debugger -->
+              <!-- ********************************************************************************** -->
+              <section>
+                <h2>Time-Travelling Debugger</h2>
+              </section>
+
               
               
 
