Also demo React dev tools.

--- a/react-redux-talk.html
+++ b/react-redux-talk.html
@@ -648,7 +648,14 @@ class UserCreation extends Component {
                 </section>
                 
               </section>
-              
+
+              <!-- ********************************************************************************** -->
+              <!-- React Dev Tools -->
+              <!-- ********************************************************************************** -->
+              <section>
+                <h2>React Dev Tools</h2>
+              </section>
+
               <!-- ********************************************************************************** -->
               <!-- React Hot Reloading -->
               <!-- ********************************************************************************** -->
